--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
+/*№6b*/
 
 
-    /*№6b*/
-
-
-table{
+table {
     border-collapse: collapse;
-   
+
 }
 
-td{
+td {
     width: 50px;
     height: 50px;
     border: solid black 1px;
@@ -16,27 +14,33 @@ td{
 
 
 table tr:nth-child(odd) td:nth-child(odd) {
-	background:black;
-}	
+    background: black;
+}
 
 table tr:nth-child(even) td:nth-child(even) {
-	background:black;
+    background: black;
 }
 
 
-table tr:first-child td, table tr:first-child td:nth-child(odd){
+table tr:first-child td,
+table tr:first-child td:nth-child(odd) {
     background: green;
 }
-table tr:last-child td, table tr:last-child td:nth-child(even){
+
+table tr:last-child td,
+table tr:last-child td:nth-child(even) {
     background: green;
-} 
-    
+}
 
 
-table tr td:first-child, table tr:first-child td:nth-child(odd){
+
+table tr td:first-child,
+table tr:first-child td:nth-child(odd) {
     background: green !important;
 }
-table tr td:last-child, table tr:last-child td:nth-child(even){
+
+table tr td:last-child,
+table tr:last-child td:nth-child(even) {
     background: green !important;
 }
 
@@ -48,12 +52,13 @@ table tr td:last-child, table tr:last-child td:nth-child(even){
 /*№6d*/
 
 
-.flex{
-    display:flex;
+.flex {
+    display: flex;
     margin-bottom: 50px;
     margin-top: 50px;
 }
-.star{
+
+.star {
     width: 82px;
     height: 83px;
     background: url(./img/star0.png);
@@ -61,17 +66,18 @@ table tr td:last-child, table tr:last-child td:nth-child(even){
 }
 
 
-.flex > div:hover{
+.flex>div:hover {
     background-image: url(./img/star1.png);
 }
 
 
 /*№6a*/
-.link{
+.link {
     margin-bottom: 50px;
 
 }
-.link a{
+
+.link a {
     padding: 0 15px 0 50px;
     font-size: 25px;
     border-right: solid 2px red;
@@ -79,15 +85,15 @@ table tr td:last-child, table tr:last-child td:nth-child(even){
 }
 
 
-.link a:first-child{
+.link a:first-child {
     padding-left: 0;
 }
 
-.link a:last-child{
+.link a:last-child {
     border-right: none;
 }
 
-.link a:hover{
+.link a:hover {
     color: red;
 }
 
@@ -98,30 +104,30 @@ table tr td:last-child, table tr:last-child td:nth-child(even){
 
 
 
-.link2 a{
+.link2 a {
     padding-left: 50px;
     font-size: 25px;
     color: green;
 }
 
 
-.link2 a:first-child{
+.link2 a:first-child {
     padding-left: 0;
 }
 
 
 
-.link2 a:hover{
+.link2 a:hover {
     color: red;
 }
 
- 
-a{
+
+a {
     position: relative;
 }
-    
 
-.link2 a::after{
+
+.link2 a::after {
     content: "\007C";
     position: absolute;
     font-weight: 900;
@@ -135,5 +141,34 @@ a{
 
 }
 
+/*№6c*/
 
+.name {
+    text-transform: capitalize;
+    font-size: 25px;
+    font-weight: 900;
+}
 
+.date {
+    color: green;
+}
+
+.champion {
+    color: red;
+}
+
+.info {
+    color: blue;
+    font-weight: 900;
+}
+
+.info::before {
+
+    content: url(./img/extref.png);
+
+}
+
+.biography {
+    color: blue;
+    font-style: italic;
+}
