--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-body{
+body {
+
+
     padding: 0;
     margin: 0;
 }
@@ -20,28 +22,33 @@ h6 {
     padding: 0;
 
 }
-.page{
+
+.layout {
     width: 100%;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
 }
 
 
-.header{
-   background-color: black;
-   height: 80px;
-   text-align: center;
-   padding-top: 20px;
+.header {
+    background-color: black;
+    height: 80px;
+    text-align: center;
+    padding-top: 20px;
 }
 
-.title{
+.title {
     color: white;
     font-size: 30px;
     text-transform: uppercase;
 }
-.container{
+
+.container {
     display: flex;
 }
-.sidebar{
+
+.sidebar {
     width: 30%;
     background: #bfcece;
     padding: 40px 40px 40px 80px;
@@ -49,27 +56,28 @@ h6 {
 }
 
 
-.main{
+.main {
     width: 70%;
     background: url(./img/1.png);
     background-position: right;
     background-repeat: repeat-y;
     padding: 0 10px;
-    
+
 
 }
-.logo{
+
+.logo {
     float: left;
     padding-right: 15px;
 }
 
-.text{
+.text {
     font-size: 22px;
     text-align: justify;
-    
+
 }
 
-.sidebar-title{
+.sidebar-title {
     font-size: 23px;
     margin-bottom: 30px;
     padding-left: 50px;
@@ -77,7 +85,7 @@ h6 {
 
 
 
-.list{
+.list {
     margin-bottom: 20px;
 
 }
@@ -94,16 +102,113 @@ h6 {
     color: #fff;
 }
 
-.main-title{
+.main-title {
     font-size: 30px;
     text-align: center;
     padding: 30px 0 20px;
 }
 
 
-.footer{
+.footer {
     padding-top: 30px;
     height: 100px;
-    background-color:black;
+    background-color: black;
     text-align: center;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    display: flex;
+    justify-content: right;
+    align-items: flex-start;
+}
+
+.modal {
+    background-color: rgb(213, 225, 89);
+    text-align: center;
+    font-size: 25px;
+    width: 120px;
+    height: 80px;
+}
+
+
+
+
+@media screen and (max-width: 1440px) {}
+
+@media screen and (max-width: 768px) {
+    .main {
+
+        background: none;
+    }
+
+    .container {
+        flex-wrap: wrap;
+        justify-content: center;
+
+    }
+
+    .sidebar {
+        width: 100%;
+    }
+
+    .main {
+        width: 100%;
+    }
+
+    .main {
+        order: 1;
+    }
+
+    .sidebar {
+        order: 2;
+    }
+
+    .header {
+        padding-top: 0;
+    }
+
+    .footer {
+        padding-top: 0;
+        height: 100px;
+        background-color: black;
+        text-align: center;
+    }
+
+
+}
+
+@media screen and (max-width: 320px) {
+
+    .header {
+        display: none;
+    }
+
+    .footer {
+        display: none;
+    }
+
+    .main-title {
+        font-size: 20px;
+        text-align: center;
+        padding: 0;
+    }
+
+    .text {
+        font-size: 16px;
+
+    }
+
+    .modal {
+
+
+        font-size: 15px;
+        width: 80px;
+        height: 50px;
+    }
 }
