--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h6 {
 
 .container {
     display: flex;
+    flex: 1 1 auto;
 }
 
 .sidebar {
@@ -72,13 +73,13 @@ h6 {
 }
 
 .text {
-    font-size: 22px;
+    font-size: 35px;
     text-align: justify;
 
 }
 
 .sidebar-title {
-    font-size: 23px;
+    font-size: 38px;
     margin-bottom: 30px;
     padding-left: 50px;
 }
@@ -87,13 +88,14 @@ h6 {
 
 .list {
     margin-bottom: 20px;
+    font-size: 25px;
 
 }
 
 
 .link {
     color: black;
-    font-size: 20px;
+    font-size: 25px;
     text-decoration: none;
     transition: color 0.3s linear;
 }
@@ -150,7 +152,6 @@ h6 {
     .container {
         flex-wrap: wrap;
         justify-content: center;
-
     }
 
     .sidebar {
@@ -179,8 +180,37 @@ h6 {
         background-color: black;
         text-align: center;
     }
+.list{
+    display: inline;
+    margin-right: 16px;
+}
+.sidebar {
+   text-align: center;
+   padding: 10px;
+}
 
-
+.link{
+    font-size: 25px;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
+.sidebar-title{
+    padding: 0;
+    margin-bottom: 12px;
+    
+}
+.text{
+    font-size: 25px;
+    margin: 0;
+}
+.main-title{
+    padding: 10px 0;
+}
+.title{
+    font-size: 25px;
+}
 }
 
 @media screen and (max-width: 320px) {
@@ -201,14 +231,35 @@ h6 {
 
     .text {
         font-size: 16px;
-
     }
 
     .modal {
-
-
         font-size: 15px;
         width: 80px;
         height: 50px;
     }
+
+    .list{
+        display: inline;
+        margin-right: 11px;
+        
+    }
+
+    .sidebar {
+        text-align: center;
+        padding: 0 10px;
+}
+.link{
+    font-size: 10px;
+}
+
+.sidebar-title{
+    font-size: 15px;
+   padding: 0;
+   margin: 0;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
 }
