--- a/style.css
+++ b/style.css
@@ -4,5 +4,15 @@ body {
 
 
 #svg_4{
-    
+   
+    transform: scale(1);
+    color: #000000;
 }
+
+#svg_4:hover{
+
+    transform: scale(1.1);
+}
+
+
+
