--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ div {
 }
 
 .container {
+    padding: 0 5px;
     max-width: 800px;
     margin: 0 auto;
 }
@@ -83,9 +84,37 @@ form {
 
 .textarea {
     display: block;
-    margin: 5px;
+    margin-left: 3px;
+    width: 650px;
 }
 
 button {
     margin: 11px;
+}
+
+
+@media screen and (max-width: 670px) {
+
+
+    .textarea {
+        width: 642px;
+    }
+
+    .input {
+        display: block;
+        width: 645px;
+    }
+
+    select {
+        width: 645px;
+    }
+
+    label {
+        display: block;
+        padding-left: 5px;
+    }
+
+    .form-publication {
+        display: block;
+    }
 }
